folder 구조 변경 및 torch 기본 모델 구현

--- a/model/1. 편미분.ipynb
+++ b/model/1. 편미분.ipynb
@@ -13,7 +13,7 @@
     "   \n",
     "   \n",
     " <b>수식1</b>\n",
-    " <img src=\"../image/1-1_1_img.png\">\n",
+    " $${\\partial f(x) \\over \\partial x} = \\lim_{h->0}{f(x+h)-f(x)\\over h}$$\n",
     " \n",
     " 참조 - https://m.blog.naver.com/ssdyka/221299637545"
    ]
